--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -34,10 +34,10 @@
         <i class='fas fa-fw fa-table'></i>
       </div>
 
-      <div class='mr-2' data-action='toggle-items-layout'>
-      <button class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
-        <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
-      </button>
+      <div class='mr-2'>
+        <div class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
+          <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
+        </div>
       </div>
 
       {# ORDER (Sort) #}
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div hidden id='filtersDiv' data-save-hidden='filtersDiv'>
+  <div id='filtersDiv' hidden data-save-hidden='filtersDiv'>
     <div class='d-flex'>
       {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
       <div class='{{ searchPage ? 'mt-2' }}'>
@@ -79,10 +79,19 @@
 
             {# CATEGORY #}
             <select name='cat' class='autosubmit mr-1 form-control' aria-label='Filter category'>
-              <option value=''>{{ Entity.type == 'experiments' ? 'Filter status'|trans : 'Filter by type'|trans }}</option>
+              <option value=''>{{ 'Filter category'|trans }}</option>
               {% for category in categoryArr %}
-                <option value='{{ category.category_id }}'{{ App.Request.query.get('cat') == category.category_id ? ' selected' }}>
-                {{ category.category|raw }}</option>
+                <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
+                {{ category.title|raw }}</option>
+              {% endfor %}
+            </select>
+
+            {# STATUS #}
+            <select name='status' class='autosubmit mr-1 form-control' aria-label='Filter status'>
+              <option value=''>{{ 'Filter status'|trans }}</option>
+              {% for status in statusArr %}
+                <option value='{{ status.id }}'{{ App.Request.query.get('status') == status.id ? ' selected' }}>
+                {{ status.title|raw }}</option>
               {% endfor %}
             </select>
 
@@ -168,19 +177,23 @@
       <div id='withSelected' class='d-none'>
         <div class='row mx-0'><p>{{ 'With selected:'|trans }}</p></div>
         <div class='row mx-0 form-inline'>
-          <!-- Change category -->
-          <select data-action='update-category-selected-entities' autocomplete='off' class='mr-1 mb-2 form-control'>
-              <option selected disabled>
-              {% if Entity.type == 'experiments' %}
-                  {{ 'Change status'|trans }}
-              {% else %}
-                  {{ 'Change item type'|trans }}
-              {% endif %}
-              </option>
-
-              {% for category in categoryArr %}
-                  <option value='{{ category.category_id }}'>{{ category.category }}</option>
-              {% endfor %}
+          {# CHANGE CATEGORY #}
+          <select data-action='update-catstat-selected-entities' data-target='category' autocomplete='off' class='mr-1 mb-2 form-control'>
+            <option selected disabled>
+              {{ 'Change category'|trans }}
+            </option>
+            {% for category in categoryArr %}
+                <option value='{{ category.id }}'>{{ category.title|raw }}</option>
+            {% endfor %}
+          </select>
+          {# CHANGE STATUS #}
+          <select data-action='update-catstat-selected-entities' data-target='status' autocomplete='off' class='mr-1 mb-2 form-control'>
+            <option selected disabled>
+              {{ 'Change status'|trans }}
+            </option>
+            {% for status in statusArr %}
+                <option value='{{ status.id }}'>{{ status.title|raw }}</option>
+            {% endfor %}
           </select>
 
           <!-- Change visibility -->
@@ -281,6 +294,12 @@
                 <div class='d-flex justify-content-between'>
                   <span>{{ 'Category'|trans }}</span>
                   <a href='#' data-action='reorder-entities' data-orderby='cat'><i class='fas {{ sortIcon("cat") }}'></i></a>
+                </div>
+              </th>
+              <th class='category-item-table w-20'>
+                <div class='d-flex justify-content-between'>
+                  <span>{{ 'Status'|trans }}</span>
+                  <a href='#' data-action='reorder-entities' data-orderby='status'><i class='fas {{ sortIcon("status") }}'></i></a>
                 </div>
               </th>
               <th class='tags-item-table w-20'>
