--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -23,25 +23,29 @@
     <thead>
       <tr>
         <th scope='col'>{{ 'Team'|trans }}</th>
-        <th scope='col'>{{ 'Owner'|trans }}</th>
+        <th scope='col'>{{ 'Title'|trans }}</th>
+        <th scope='col'>{{ 'Category'|trans }}</th>
         <th scope='col'>{{ 'Last modification date'|trans }}</th>
-        <th scope='col'>{{ 'Name'|trans }}</th>
+        <th scope='col'>{{ 'Owner'|trans }}</th>
       </tr>
     </thead>
     <tbody>
       {% for template in templatesArr %}
         <tr>
           <td>{{ template.team_name }}</td>
-          <td>{{ template.fullname|raw }}</td>
-          <td>{{ template.modified_at }}</td>
           <td>
-            <a href='?tab=3&mode=view&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-eye clickable link-like'></i></span></a>
+            <a href='?tab=3&mode=view&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-eye'></i></span></a>
             {% if App.Request.getScriptName|split('/')|last == 'ucp.php' %}
-              <a href='?tab=3&mode=edit&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt clickable link-like'></i></span></a>
+              <a href='?tab=3&mode=edit&templateid={{ template.id }}'><span class='p-2 rounded hl-hover-gray'><i class='fas fa-pencil-alt'></i></span></a>
             {% endif %}
               {# clickable toggle pin button #}
               <span title='{{ 'Toggle pin (add to create button menu)'|trans }}' data-action='toggle-pin' data-id='{{ template.id }}' class='{{ template.is_pinned ? 'bgnd-gray' : 'hl-hover-gray' }} p-1 rounded'><i data-toggle-pin-icon='' class='fas fa-thumbtack {{ not template.is_pinned ? 'color-weak' }} fa-fw'></i></span>
               {{ template.title|raw }}</td>
+          <td>
+            <span class='category-button rounded p-1' style='--bg:#{{ template.category_color }}'>{{ template.category_title|raw }}</span>
+          </td>
+          <td>{{ template.modified_at }}</td>
+          <td>{{ template.fullname|raw }}</td>
         </tr>
       {% endfor %}
     </tbody>
