--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -1,5 +1,7 @@
 {# required vars: rw: coming from canread or canwrite #}
 {# default icon/label are for canread #}
+{# twigcs use-var can #}
+{# see https://github.com/friendsoftwig/twigcs/issues/121 #}
 {% set icon = 'eye' %}
 {% set label = 'Visibility'|trans %}
 {% set modalTitle = 'Select who can see this entry'|trans %}
