--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -128,7 +128,7 @@
                       </a>
                     </div>
                     <i class='fas fa-link mr-1'></i>
-                    <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
+                    <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
                     {{ link.title|raw }}</a>
                     <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
                     <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
@@ -163,7 +163,7 @@
 
   <!-- ITEMS LINKS -->
   <section class='col-md-12'>
-    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked items'|trans }}</h4>
+    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked resources'|trans }}</h4>
     <div class='mt-2' data-save-hidden='linksDiv'>
       <!-- DISPLAY ITEMS LINKS -->
       <div id='linksDiv'>
@@ -190,7 +190,7 @@
                     </a>
                   </div>
                   <i class='fas fa-link mr-1'></i>
-                  <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.category|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
+                  <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
                   {{ link.title|raw }}</a>
                   <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
                   <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
@@ -209,7 +209,7 @@
           <select id='addLinkCatFilter' class='brr-none brl-none form-control'>
             <option selected value=''>{{ 'Any category'|trans }}</option>
             {% for cat in itemsCategoryArr %}
-              <option value='{{ cat.category_id }}'>{{ cat.category }}</option>
+              <option value='{{ cat.id }}'>{{ cat.title|raw }}</option>
             {% endfor %}
           </select>
         </div>
