--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -163,7 +163,7 @@
     <div class='input-group'>
       <input type='text' id='teamGroupCreate' class='form-control' placeholder='{{ 'Add a group'|trans }}' aria-label='{{ 'Add a group'|trans }}'>
       <div class='input-group-append'>
-        <button class='btn btn-primary' data-action='create-teamgroup' data-teamid='{{ App.Users.userData.team }}' type='button'>{{ 'Create'|trans }}</button>
+        <button class='btn btn-primary' data-action='create-teamgroup' type='button'>{{ 'Create'|trans }}</button>
       </div>
     </div>
     <!-- END CREATE GROUP -->
@@ -178,11 +178,11 @@
           <a class='clickable teamGroupDelete float-right' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
             <i class='fas fa-trash-alt'></i>
           </a>
-          <h5><i class='fas fa-users'></i> <span data-teamid='{{ App.Users.userData.team }}' data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h5>
+          <h5><i class='fas fa-users'></i> <span data-id='{{ teamGroup.id }}' class='malleableTeamgroupName hl-hover'>{{ teamGroup.name|raw }}</span></h5>
           <hr>
           <div class='d-flex flex-wrap'>
             {% for user in teamGroup.users %}
-            <div class='user-badge rounded px-2 py-1 mr-2 mt-2'>{{ user.fullname|raw }} <span title='{{ 'Delete'|trans }}' class='clickable rmUserFromGroup m-1' data-user='{{ user.userid }}' data-teamid='{{ App.Users.userData.team }}' data-group='{{ teamGroup.id }}'><i class='fas fa-xmark' style='color:#29AEB9' ></i></span></div>
+            <div class='user-badge rounded px-2 py-1 mr-2 mt-2'>{{ user.fullname|raw }} <span title='{{ 'Delete'|trans }}' class='clickable rmUserFromGroup m-1' data-user='{{ user.userid }}' data-group='{{ teamGroup.id }}'><i class='fas fa-xmark' style='color:#29AEB9' ></i></span></div>
             {% endfor %}
           </div>
           <!-- ADD USER -->
@@ -192,7 +192,7 @@
             </div>
             <input type='text' class='form-control' data-complete-target='users' placeholder='{{ 'User name'|trans }}' aria-label='{{ 'User name'|trans }}'>
             <div class='input-group-append'>
-              <button class='btn btn-primary' data-action='adduser-teamgroup' data-teamid='{{ App.Users.userData.team }}' data-groupid='{{ teamGroup.id }}' type='button'>{{ 'Add user'|trans }}</button>
+              <button class='btn btn-primary' data-action='adduser-teamgroup' data-groupid='{{ teamGroup.id }}' type='button'>{{ 'Add user'|trans }}</button>
             </div>
           </div>
         </div>
@@ -245,11 +245,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-target='expcat' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button data-id='{{ cat.id }}' class='btn btn-primary' data-target='expcat' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ cat.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments_categories' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ cat.id }}' data-target='experiments_categories' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -361,11 +361,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-target='experiments' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button data-id='{{ status.id }}' class='btn btn-primary' data-target='experiments' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='experiments_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ status.id }}' data-target='experiments_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -408,11 +408,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-target='items' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button data-id='{{ status.id }}' class='btn btn-primary' data-target='items' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.id }}' data-teamid='{{ App.Users.userData.team }}' data-target='items_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ status.id }}' data-target='items_status' data-action='destroy-catstat' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
           </ul>
         </li>
@@ -516,7 +516,7 @@
     <div class='input-group'>
       <input type='text' id='adminAddTagInput' class='form-control' placeholder='{{ 'Add a tag'|trans }}' aria-label='{{ 'Add a tag'|trans }}'>
       <div class='input-group-append'>
-        <button class='btn btn-primary' data-action='admin-add-tag' data-teamid='{{ App.Users.userData.team }}' type='button'>{{ 'Save'|trans }}</button>
+        <button class='btn btn-primary' data-action='admin-add-tag' type='button'>{{ 'Save'|trans }}</button>
       </div>
     </div>
   </div>
