--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -9,7 +9,7 @@
           <a class='tag margin-1px hover-danger {{ loop.last ? 'mr-2' }} {{ tag.is_favorite ? 'favorite' }}' data-action='unreference-tag' data-tagid='{{ tag.tag_id }}'>{{ tag.tag|raw }}</a>
         {%- endfor -%}
       </div>
-      <input type='text' id='createTagInput' data-teamid='{{ App.Users.userData.team }}' data-autocomplete='tags' class='createTagInput form-control' placeholder='{{ 'Add a tag'|trans }}' />
+      <input type='text' id='createTagInput' data-autocomplete='tags' class='createTagInput form-control' placeholder='{{ 'Add a tag'|trans }}' />
     </div>
   </div>
   <div class='d-flex mb-2 align-items-center mathjax-ignore'>
