--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -45,9 +45,9 @@
               <option value='time'>{{ 'Time'|trans }}</option>
               <option value='checkbox'>{{ 'Checkbox'|trans }}</option>
               <option value='number'>{{ 'Number'|trans }}</option>
-              <option value='experiments'>{{ 'Experiments'|trans }}</option>
-              <option value='items'>{{ 'Resources'|trans }}</option>
-              <option value='users'>{{ 'Users'|trans }}</option>
+              <option value='experiments'>{{ 'Experiment'|trans }}</option>
+              <option value='items'>{{ 'Resource'|trans }}</option>
+              <option value='users'>{{ 'User'|trans }}</option>
               <option value='url'>URL</option>
             </select>
 
