make title malleable in view mode

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -46,7 +46,7 @@
   </div>
 
   {# TITLE #}
-  <h1 id='documentTitle' class='mb-4 title text-dark'>
+  <h1 id='documentTitle' class='mb-4 title text-dark malleableColumn hl-hover-gray py-1 rounded' data-target='title' data-endpoint='{{ Entity.type }}' data-id='{{ Entity.id }}'>
     {{ Entity.entityData.title|raw }}
   </h1>
 
