--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -1,22 +1,15 @@
 <!-- Modal to display plain text content -->
 <div class='modal fade' id='plainTextModal' tabindex='-1' role='dialog' aria-labelledby='plainTextModalLabel' aria-hidden='true'>
-  <div class='modal-dialog' role='document'>
+  <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='plainTextModalLabel'>{{ 'File content'|trans }}</h5>
+        <h5 class='modal-title' id='plainTextModalLabel'></h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
       <div class='modal-body row'>
-        <div class='col'>
-          <label for='plainTextArea' id='plainTextAreaLabel'>Filename</label>
-          <textarea class='form-control' name='plainTextArea' id='plainTextArea' readonly></textarea>
-        </div>
-        <div id='mdPreviewWrapper' class='col'>
-          <label>{{ 'Preview'|trans }}</label>
-          <div id='mdPreview' class='border rounded p-2'></div>
-        </div>
+        <div class='col' id='plainTextContentDiv'></div>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Close'|trans }}</button>
@@ -156,7 +149,7 @@
               <!-- TEXT -->
               {% elseif ext matches '/(txt|md)$/i' %}
                 <span class='eye-overlay'
-                  data-action='show-plain-text' data-ext='{{ ext }}'
+                  data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}'
                   data-storage='{{ upload.storage }}'
                   data-path='{{ upload.long_name }}'
                   data-name='{{ upload.real_name }}'>
