--- a/src/templates/upload-dropdown-menu.html
+++ b/src/templates/upload-dropdown-menu.html
@@ -57,7 +57,7 @@
   {% endif %}
 
     <!-- Show content of plain text -->
-    {% if ext matches '/(txt|md)$/i' %}
+    {% if ext matches '/(txt|md|json)$/i' %}
       <a class='dropdown-item' data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}' data-name='{{ upload.real_name }}'>
         <i class='fas fa-fw fa-eye mr-1'></i>{{ 'Show content of file'|trans }}</a>
     {% endif %}
