--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -225,7 +225,7 @@
               <select id='addLinkCatFilter' class='brl-none form-control'>
                 <option selected value=''>{{ 'Any category'|trans }}</option>
                 {% for cat in itemsCategoryArr %}
-                  <option value='{{ cat.category_id }}'>{{ cat.category }}</option>
+                  <option value='{{ cat.id }}'>{{ cat.title }}</option>
                 {% endfor %}
               </select>
             </div>
